--- a/src/scss/_color-use-cases.scss
+++ b/src/scss/_color-use-cases.scss
@@ -1,5 +1,7 @@
 @include oColorsSetUseCase(o-crossword, background, 'transparent');
 @include oColorsSetUseCase(o-crossword-border, border, 'section-green');
 @include oColorsSetUseCase(o-crossword-empty, background, 'section-green');
-@include oColorsSetUseCase(o-crossword-hidden, background, 'section-light-green');
-@include oColorsSetUseCase(o-crossword-hidden, text, 'section-light-green');
+@include oColorsSetUseCase(o-crossword-hidden-across, background, 'section-light-green');
+@include oColorsSetUseCase(o-crossword-hidden-down, background, 'section-light-blue');
+@include oColorsSetUseCase(o-crossword-hidden-across, text, 'section-light-green');
+@include oColorsSetUseCase(o-crossword-hidden-down, text, 'section-light-blue');
